Fix transparency of overlays
- Fix #1884